--- a/_posts/2017-01-17-.md
+++ b/_posts/2017-01-17-.md
@@ -1,1 +1,1 @@
-Paper accepted at Atmospheric Environment
+<a href='https://www.sciencedirect.com/science/article/pii/S1352231017300018'>Paper</a> published in Atmospheric Environment
