--- a/_posts/2018-05-24-.md
+++ b/_posts/2018-05-24-.md
@@ -1,1 +1,1 @@
-Invited to speak at ReWork, Deep Learning for Healthcare, Boston
+Invited to <a href='https://www.re-work.co/blog/accelerating-high-throughput-drug-discovery-using-deep-learning'>speak</a> at ReWork, Deep Learning for Healthcare, Boston
