--- a/_posts/2018-05-25-.md
+++ b/_posts/2018-05-25-.md
@@ -1,1 +1,1 @@
-Offered to sit on the Advisory Board for the MS in Data Analytics Program at Tufts University
+Offered to sit on the <a href='https://as.tufts.edu/dataanalytics/people/advisoryBoard.htm'>Advisory Board</a> for the MS in Data Analytics Program at Tufts University
