--- a/_posts/2018-11-14-.md
+++ b/_posts/2018-11-14-.md
@@ -1,1 +1,1 @@
-Paper accepted at Machine Learning 4 Health Workshop at NIPS 2018
+<a href='https://arxiv.org/abs/1811.10520'>Paper</a> accepted at Machine Learning 4 Health Workshop at NIPS 2018
