--- a/_posts/2019-11-20-.md
+++ b/_posts/2019-11-20-.md
@@ -1,1 +1,1 @@
-Guest Lecture on Machine Learning in Healthcare and Drug Discovery for the Data Analytics program at Tufts University 
+Guest Lecture on Machine Learning in Healthcare and Drug Discovery at Tufts University 
