--- a/_posts/2020-01-28-.md
+++ b/_posts/2020-01-28-.md
@@ -1,1 +1,1 @@
-Invited speaker at the Society for Lab Automation and Screening Conference. Topic: Assessing biological diversity of a compound collection using high throughput cellular imaging and no ground truth
+Invited speaker at <a href='https://www.slas2020.org'>SLAS 2020<\a>. Speaking on assessing biological diversity of a compound collection using high throughput cellular imaging and no ground truth
